--- a/dva-quickstart/.roadhogrc
+++ b/dva-quickstart/.roadhogrc
@@ -1,9 +1,14 @@
 {
   "proxy": {
     "/api": {
-        "target": "http://jsonplaceholder.typicode.com/",
-        "changeOrigin": true,
-        "pathRewrite": { "^/api" : "" }
+      "target": "http://localhost:8080/api/",
+      "changeOrigin": true,
+      "pathRewrite": { "^/api" : "" }
+    },
+    "/oauth": {
+      "target": "http://localhost:8080/oauth/",
+      "changeOrigin": true,
+      "pathRewrite": { "^/oauth" : "" }
     }
-},
+  },
 }
